# Changelog – Betriebsmittel Ablauf

Alle relevanten Änderungen an diesem Modul werden hier dokumentiert.
Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und [SemVer](https://semver.org/lang/de/).

---

## [1.5.0] – 2026-01-27
### Added
- Kategorie „Consumable“ ergänzt, inklusive Ablauftag (Tag/Monat/Jahr) nur für Verbrauchsmaterial.

## [1.4.1] – 2026-01-24
### Changed
- Eingabeformular vor die Such- und Filterzeile verschoben.
- Gerätekacheln mit mehr Fläche und größerer Mindestbreite dargestellt.
- Fünf Gerätekacheln skalieren jetzt auf die volle Modulbreite.

## [1.4.0] – 2026-01-24
### Added
- Gerätekarten sind standardmäßig kompakt und lassen sich per Klick aufklappen, inklusive Accent-Rahmen für den aktiven Eintrag.

### Changed
- Die Kartenansicht begrenzt die maximale Anzahl sichtbarer Betriebsmittel auf fünf pro Zeile.

## [1.3.3] – 2026-01-24
### Added
- Ablaufmonat-Eingabe liest Kurzformate zuverlässig aus Tastatureingaben, normalisiert sie beim Tab-Wechsel zu Monat/Jahr und setzt den Fokus auf den Prüftyp.

## [1.3.2] – 2026-01-24
### Added
- Kurzform-Eingaben im Ablaufmonat (z. B. 1026/102026/126) werden automatisch als Monat/Jahr interpretiert.

## [1.3.1] – 2026-01-24
### Fixed
- Doppelten Mailvordruck-Button in den Aktionen entfernt.

## [1.3.0] – 2026-01-24
### Added
- Kontextmenü per Rechtsklick auf den Header ergänzt, um Textbausteine direkt im Modal zu pflegen.
- Verwaltung der Textbausteine (Hinzufügen, Entfernen, Speichern) im Modulzustand gespeichert.
- Standard-Textbaustein (Mailvordruck) ergänzt und Liste der verfügbaren Platzhalter im Modal ergänzt.
- Textbaustein-Modal und Textfeld größer skaliert, um die Bearbeitung zu erleichtern.
- Textbaustein-Eingabefeld breiter gemacht und Textbausteine als Buttons an den Geräten ergänzt.

## [1.2.0] – 2026-01-24
### Added
- Optionales Feld für Betriebsmittelnummern ergänzt und in der Suche berücksichtigt.